# ai-content-planner

./: .coverage  .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  main.py  pyproject.toml  requirements.txt  run.py
agents/: planner.py  session.py
ai/: __init__.py  client.py
docs/: CHANGELOG.md  GENERATE_CONTEXT.md  QUICK_REFERENCE.md  REORGANIZATION.md  REORGANIZATION_SUMMARY.md
spec/: SPEC.md  TODO.md
src/agents/: __init__.py  ai2ai_agent.py  content_expert_agent.py  customer_agent.py  planner.py  salesman_agent.py  session.py
src/ai/: client.py
src/tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_session.py  test_ui.py
src/ui/: console.py
src/utils/: __init__.py  config.py  logger.py
tests/: test_ai.py  test_config.py  test_session.py
tools/: generate_context.py
tools/tests/test_data/: README.md  context_input_2.md  product_headphones.md  product_smartwatch.md  product_vacuum.json  test_generate_context.py  test_output.md  vacuum_context.md
ui/: __init__.py  console.py
utils/: __init__.py  config.py
